--- a/Frontend/Shared/NavMenu.razor
+++ b/Frontend/Shared/NavMenu.razor
@@ -37,6 +37,11 @@
                     <span class="oi oi-person" aria-hidden="true"></span> Event Management 
                 </NavLink>
             </div>
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="EventsReport">
+                    <span class="oi oi-person" aria-hidden="true"></span> Reports
+                </NavLink>
+            </div>
         }
 
         @if (UserIsUserManager)
